nysc page created

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 body {
   background: #020019;
-  overflow-x: hidden;
+  overflow: hidden;
   transition: 0.5s;
 }
 .asd {
@@ -37,7 +37,7 @@ body {
 }
 .header {
   width: 100%;
-  /* height: 100vh; */
+  height: 100vh;
   background: #00122e;
   position: relative;
 }
@@ -98,7 +98,7 @@ nav ul li i:hover {
   width: 25px;
   margin-left: 40px;
 }
-.row {
+.rows {
   margin-top: 15px;
   display: flex;
   justify-content: space-between;
