--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,15 @@ body {
   border-radius: 30% 30% 0% 0%;
 }
 .let {
-  border-radius: 0% 0% 5% 90%;
+  border-radius: 0% 0% 0% 90%;
   margin-left: -14px;
 }
 .ded {
   border-radius: 0% 0% 90% 0%;
   margin-right: -14px;
+}
+.tp{
+  border-top: 4px solid green;
 }
 .buton{
   cursor: pointer;
